# MightyDev

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  global.css  languagMap.ts  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: bge_embed.py  setup.py
src-tauri/src/: config.rs  main.rs
src-tauri/src/bindings/: embed.rs  python_runtime.rs
src-tauri/src/commands/: api.rs  auth.rs  fs.rs  greptile.rs  process_manager.rs  proxy.rs  storage.rs  terminal.rs  terminal_session.rs
src-tauri/src/context/: context.rs  context_manager copy.rs  context_manager.rs
src-tauri/src/plugins/: cors.rs
src/classes/agents/: Agent.ts  CodeAnalysis.ts  Factory.ts  Message.ts  Pool.ts  architect.ts  initializeAgents.ts  orchestrator.ts
src/classes/events/: EventSystem.ts  eventBus.ts  eventEmitter.ts  manager.ts
src/components/: AINativeIDE.tsx  ChatInterface.tsx  ChatManagemet.tsx  ChatSelector.tsx  ChatWorkspace.tsx  Context.tsx  ContextError.tsx  ContextViewer.tsx  EventUI.tsx  FileBrowser.tsx  FilePicker.tsx  FloatingActionBar.tsx  IDEWorkspace.tsx  InitError.tsx  Monaco.tsx  MonacoEditor.tsx  NaturalLanguageInterface.tsx  ResizablePanel.tsx  Terminal.tsx  WSIndicator.tsx  test.tsx
src/handlers/: ai.ts
src/handlers/tools/greptile/: index.ts
src/hooks/: useAuthInit.ts  useChatStorage.ts  useContext.ts  useStorage.ts
src/integrations/greptile/: index.ts
src/languages/: index.ts  jsx.ts  python.ts  rust.ts  sql.ts  toml.ts  tsx.ts
src/lib/: auth.ts  rocksdb.ts
src/services/: init.ts
src/services/ai/: Anthropic.ts  Toolregistry.ts
src/services/ai/tools/greptile/: index.ts
src/services/context/: Context.ts  fileOperations.ts
src/services/db/: lancedb.ts  rocksdb.ts
src/types/: ai.ts  chat.ts  context.ts  events.ts  filesystem.ts  messages.ts
src/types/agents/: base.ts  orchestration.ts  pool.ts
src/types/tools/: base.ts  greptile.ts
