[package]
name = "mighty"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "mighty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
nix = { version = "0.29.0", features = [ "term"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.8"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
notify = "5.0"
futures = "0.3"
async-trait = "0.1"
tauri-plugin-fs = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
